About page added

--- a/templates/count.html
+++ b/templates/count.html
@@ -1,4 +1,6 @@
 <h1>There are  {{ count }} words in your text!</h1>
+
+<a href="{% url 'home' %}">Start Again</a>
 <h2>Your Entry: </h2>
 {{ fulltext }}
 
