--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,7 @@
 <h1>Text Count</h1>
 
+<a href="{% url 'about' %}">About Text Count</a>
+
 <!--
 
 URL to next page goes under action portion of form
